compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__use___wrong_callback_arg_with_wrong_annotation.snap
---
source: compiler-core/src_refactored/__core/type_/tests/use_.rs
assertion_line: 301
expression: "\nlet x = fn(f) { \"Hello, \" <> f(1) }\nuse n: String <- x()\nn <> \"Giacomo!\"\n"
snapshot_kind: text
---
----- SOURCE CODE

let x = fn(f) { "Hello, " <> f(1) }
use n: String <- x()
n <> "Giacomo!"


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:3:5
  │
3 │ use n: String <- x()
  │     ^^^^^^^^^

Expected type:

    Int

Found type:

    String
